SubmitToolOutputs terminado, empezando a desarrollar la BBDD

--- a/OpenDataSigAPI/appsettings.json
+++ b/OpenDataSigAPI/appsettings.json
@@ -10,7 +10,8 @@
   "EndPointsOpenAi": {
     "Threads": "https://api.openai.com/v1/threads",
     "Messages": "messages",
-    "Runs": "runs"
+    "Runs": "runs",
+    "SubmitToolOutputs": "submit_tool_outputs"
   }
 }
 
