Data adaptado al proyecto y clase Constants creada

--- a/OpenDataSigAPI/appsettings.json
+++ b/OpenDataSigAPI/appsettings.json
@@ -6,6 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AtencionUsuarios": "Data Source=(DESCRIPTION =(ADDRESS=(PROTOCOL=TCP)(HOST= oraclescan)(PORT=1521))(CONNECT_DATA =(SERVER = DEDICATED)(SERVICE_NAME = AYTOCC)));User Id=ATENCION_USUARIOS;Password=OLMV8vY\\mN9c;"
+  },
   "IdAssistantFarmacias": "asst_LaCKtLYCXbB6lHslfYtS9cES",
   "EndPointsOpenAi": {
     "Threads": "https://api.openai.com/v1/threads",
