--- a/OpenDataSigAPI/OpenDataSigAPI.csproj
+++ b/OpenDataSigAPI/OpenDataSigAPI.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Data\Data.csproj" />
     <ProjectReference Include="..\Services\Services.csproj" />
   </ItemGroup>
 
