--- a/OpenDataSigAPI/appsettings.json
+++ b/OpenDataSigAPI/appsettings.json
@@ -9,7 +9,8 @@
   "ConnectionStrings": {
     "AtencionUsuarios": "Data Source=(DESCRIPTION =(ADDRESS=(PROTOCOL=TCP)(HOST= oraclescan)(PORT=1521))(CONNECT_DATA =(SERVER = DEDICATED)(SERVICE_NAME = AYTOCC)));User Id=ATENCION_USUARIOS;Password=OLMV8vY\\mN9c;"
   },
-  "IdAssistantFarmacias": "asst_LaCKtLYCXbB6lHslfYtS9cES",
+  "IdAssistant": "asst_LaCKtLYCXbB6lHslfYtS9cES",
+  "IdAssistantBBDD":  "11",
   "EndPointsOpenAi": {
     "Threads": "https://api.openai.com/v1/threads",
     "Messages": "messages",
