Se inserta Thread, Run y Mensajes en la BBDD

--- a/OpenDataSigAPI/appsettings.json
+++ b/OpenDataSigAPI/appsettings.json
@@ -9,13 +9,19 @@
   "ConnectionStrings": {
     "AtencionUsuarios": "Data Source=(DESCRIPTION =(ADDRESS=(PROTOCOL=TCP)(HOST= oraclescan)(PORT=1521))(CONNECT_DATA =(SERVER = DEDICATED)(SERVICE_NAME = AYTOCC)));User Id=ATENCION_USUARIOS;Password=OLMV8vY\\mN9c;"
   },
+  "Provider": "DataSigAgent",
   "IdAssistant": "asst_LaCKtLYCXbB6lHslfYtS9cES",
-  "IdAssistantBBDD":  "11",
+  "IdAssistantBBDD": "11",
   "EndPointsOpenAi": {
     "Threads": "https://api.openai.com/v1/threads",
     "Messages": "messages",
     "Runs": "runs",
     "SubmitToolOutputs": "submit_tool_outputs"
-  }
+  },
+  "ModelosOpenAi": {
+    "gpt-4o": "gpt-4o",
+    "gpt-4o-mini": "gpt-4o-mini"
+  },
+  "Description": "Consulta sobre Cáceres"
 }
 
