--- a/OpenDataSigAPI/appsettings.json
+++ b/OpenDataSigAPI/appsettings.json
@@ -18,6 +18,12 @@
     "Runs": "runs",
     "SubmitToolOutputs": "submit_tool_outputs"
   },
+  "URL_APIs": {
+    "ContenedoresBasura": "https://ide.caceres.es/geoserver/Servicios_Municipales/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=Servicios_Municipales%3ACONTENEDORES&maxFeatures=50&outputFormat=application%2Fjson",
+    "Desfibriladores": "https://ide.caceres.es/geoserver/toponimia/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=toponimia%3Adesfibriladores&maxFeatures=50&outputFormat=application%2Fjson",
+    "Farmacias": "https://ide.caceres.es/geoserver/toponimia/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=toponimia%3Afarmacias&maxFeatures=50&outputFormat=application%2Fjson",
+    "PlazasMovilidadReducida": "https://ide.caceres.es/geoserver/Movilidad_urbana/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=Movilidad_urbana%3AMovilidad_reducida&maxFeatures=50&outputFormat=application%2Fjson"
+  }, 
   "ModelosOpenAi": {
     "gpt-4o": "gpt-4o",
     "gpt-4o-mini": "gpt-4o-mini"
