--- a/OpenDataSigAPI/appsettings.json
+++ b/OpenDataSigAPI/appsettings.json
@@ -22,11 +22,12 @@
     "ContenedoresBasura": "https://ide.caceres.es/geoserver/Servicios_Municipales/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=Servicios_Municipales%3ACONTENEDORES&maxFeatures=2500&outputFormat=application%2Fjson",
     "Desfibriladores": "https://ide.caceres.es/geoserver/toponimia/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=toponimia%3Adesfibriladores&maxFeatures=100&outputFormat=application%2Fjson",
     "Farmacias": "https://ide.caceres.es/geoserver/toponimia/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=toponimia%3Afarmacias&maxFeatures=50&outputFormat=application%2Fjson",
-    "PlazasMovilidadReducida": "https://ide.caceres.es/geoserver/Movilidad_urbana/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=Movilidad_urbana%3AMovilidad_reducida&maxFeatures=1000&outputFormat=application%2Fjson"
+    "PlazasMovilidadReducida": "https://ide.caceres.es/geoserver/Movilidad_urbana/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=Movilidad_urbana%3AMovilidad_reducida&maxFeatures=1000&outputFormat=application%2Fjson",
+    "PuntosLimpios": "https://ide.caceres.es/geoserver/toponimia/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=toponimia%3Apuntos_limpios&maxFeatures=50&outputFormat=application%2Fjson"
   }, 
   "ModelosOpenAi": {
     "gpt-4o": "gpt-4o",
-    "gpt-4o-mini": "gpt-4o"
+    "gpt-4o-mini": "gpt-4o-mini"
   },
   "Description": "Consulta sobre Cáceres"
 }
