--- a/OpenDataSigAPI/appsettings.json
+++ b/OpenDataSigAPI/appsettings.json
@@ -27,7 +27,7 @@
   }, 
   "ModelosOpenAi": {
     "gpt-4o": "gpt-4o",
-    "gpt-4o-mini": "gpt-4o"
+    "gpt-4o-mini": "gpt-4o-mini"
   },
   "Description": "Consulta sobre Cáceres"
 }
